src/pytelo/_internal/wmtlParser.py
# Generated from wmtl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


'''
 Copyright (c) 2023, Explainable Robotics Lab (ERL), Lehigh University
 @author: Gustavo A. Cardona, Cristian-Ioan Vasile

 Copyright (c) 2026, Explainable Robotics Lab (ERL), Lehigh University
 @editor: Crockett L. Hensley
 See license.txt file for license information.
'''


class wmtlParser ( Parser ):

    grammarFileName = "wmtl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "','", "']'", "'^'", 
                     "<INVALID>", "<INVALID>", "'=>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'U'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "AND", "OR", 
                      "IMPLIES", "NOT", "EVENT", "ALWAYS", "UNTIL", "BOOLEAN", 
                      "VARIABLE", "RATIONAL", "WS" ]

    RULE_wmtlProperty = 0
    RULE_booleanExpr = 1

    ruleNames =  [ "wmtlProperty", "booleanExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    AND=7
    OR=8
    IMPLIES=9
    NOT=10
    EVENT=11
    ALWAYS=12
    UNTIL=13
    BOOLEAN=14
    VARIABLE=15
    RATIONAL=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class WmtlPropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return wmtlParser.RULE_wmtlProperty

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BooleanPredContext(WmtlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wmtlParser.WmtlPropertyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def booleanExpr(self):
            return self.getTypedRuleContext(wmtlParser.BooleanExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanPred" ):
                listener.enterBooleanPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanPred" ):
                listener.exitBooleanPred(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanPred" ):
                return visitor.visitBooleanPred(self)
            else:
                return visitor.visitChildren(self)


    class LongFormulaContext(WmtlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wmtlParser.WmtlPropertyContext
            super().__init__(parser)
            self.op = None # Token
            self.weight = None # Token
            self.copyFrom(ctx)

        def wmtlProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wmtlParser.WmtlPropertyContext)
            else:
                return self.getTypedRuleContext(wmtlParser.WmtlPropertyContext,i)

        def AND(self):
            return self.getToken(wmtlParser.AND, 0)
        def VARIABLE(self):
            return self.getToken(wmtlParser.VARIABLE, 0)
        def OR(self):
            return self.getToken(wmtlParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLongFormula" ):
                listener.enterLongFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLongFormula" ):
                listener.exitLongFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLongFormula" ):
                return visitor.visitLongFormula(self)
            else:
                return visitor.visitChildren(self)


    class FormulaContext(WmtlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wmtlParser.WmtlPropertyContext
            super().__init__(parser)
            self.left = None # WmtlPropertyContext
            self.op = None # Token
            self.child = None # WmtlPropertyContext
            self.low = None # Token
            self.high = None # Token
            self.weight = None # Token
            self.right = None # WmtlPropertyContext
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(wmtlParser.NOT, 0)
        def wmtlProperty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(wmtlParser.WmtlPropertyContext)
            else:
                return self.getTypedRuleContext(wmtlParser.WmtlPropertyContext,i)

        def EVENT(self):
            return self.getToken(wmtlParser.EVENT, 0)
        def RATIONAL(self, i:int=None):
            if i is None:
                return self.getTokens(wmtlParser.RATIONAL)
            else:
                return self.getToken(wmtlParser.RATIONAL, i)
        def VARIABLE(self):
            return self.getToken(wmtlParser.VARIABLE, 0)
        def ALWAYS(self):
            return self.getToken(wmtlParser.ALWAYS, 0)
        def IMPLIES(self):
            return self.getToken(wmtlParser.IMPLIES, 0)
        def AND(self):
            return self.getToken(wmtlParser.AND, 0)
        def OR(self):
            return self.getToken(wmtlParser.OR, 0)
        def UNTIL(self):
            return self.getToken(wmtlParser.UNTIL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula" ):
                listener.enterFormula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula" ):
                listener.exitFormula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)


    class ParpropContext(WmtlPropertyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a wmtlParser.WmtlPropertyContext
            super().__init__(parser)
            self.child = None # WmtlPropertyContext
            self.copyFrom(ctx)

        def wmtlProperty(self):
            return self.getTypedRuleContext(wmtlParser.WmtlPropertyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParprop" ):
                listener.enterParprop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParprop" ):
                listener.exitParprop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParprop" ):
                return visitor.visitParprop(self)
            else:
                return visitor.visitChildren(self)



    def wmtlProperty(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = wmtlParser.WmtlPropertyContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_wmtlProperty, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = wmtlParser.ParpropContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 5
                self.match(wmtlParser.T__0)
                self.state = 6
                localctx.child = self.wmtlProperty(0)
                self.state = 7
                self.match(wmtlParser.T__1)
                pass
            elif token in [14, 15]:
                localctx = wmtlParser.BooleanPredContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 9
                self.booleanExpr()
                pass
            elif token in [10]:
                localctx = wmtlParser.FormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 10
                localctx.op = self.match(wmtlParser.NOT)
                self.state = 11
                localctx.child = self.wmtlProperty(9)
                pass
            elif token in [11]:
                localctx = wmtlParser.FormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 12
                localctx.op = self.match(wmtlParser.EVENT)
                self.state = 13
                self.match(wmtlParser.T__2)
                self.state = 14
                localctx.low = self.match(wmtlParser.RATIONAL)
                self.state = 15
                self.match(wmtlParser.T__3)
                self.state = 16
                localctx.high = self.match(wmtlParser.RATIONAL)
                self.state = 17
                self.match(wmtlParser.T__4)
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 18
                    self.match(wmtlParser.T__5)
                    self.state = 19
                    localctx.weight = self.match(wmtlParser.VARIABLE)


                self.state = 22
                localctx.child = self.wmtlProperty(8)
                pass
            elif token in [12]:
                localctx = wmtlParser.FormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 23
                localctx.op = self.match(wmtlParser.ALWAYS)
                self.state = 24
                self.match(wmtlParser.T__2)
                self.state = 25
                localctx.low = self.match(wmtlParser.RATIONAL)
                self.state = 26
                self.match(wmtlParser.T__3)
                self.state = 27
                localctx.high = self.match(wmtlParser.RATIONAL)
                self.state = 28
                self.match(wmtlParser.T__4)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 29
                    self.match(wmtlParser.T__5)
                    self.state = 30
                    localctx.weight = self.match(wmtlParser.VARIABLE)


                self.state = 33
                localctx.child = self.wmtlProperty(7)
                pass
            elif token in [7]:
                localctx = wmtlParser.LongFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 34
                localctx.op = self.match(wmtlParser.AND)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 35
                    self.match(wmtlParser.T__5)
                    self.state = 36
                    localctx.weight = self.match(wmtlParser.VARIABLE)


                self.state = 39
                self.match(wmtlParser.T__0)
                self.state = 40
                self.wmtlProperty(0)
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 41
                    self.match(wmtlParser.T__3)
                    self.state = 42
                    self.wmtlProperty(0)
                    self.state = 45 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==4):
                        break

                self.state = 47
                self.match(wmtlParser.T__1)
                pass
            elif token in [8]:
                localctx = wmtlParser.LongFormulaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 49
                localctx.op = self.match(wmtlParser.OR)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 50
                    self.match(wmtlParser.T__5)
                    self.state = 51
                    localctx.weight = self.match(wmtlParser.VARIABLE)


                self.state = 54
                self.match(wmtlParser.T__0)
                self.state = 55
                self.wmtlProperty(0)
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 56
                    self.match(wmtlParser.T__3)
                    self.state = 57
                    self.wmtlProperty(0)
                    self.state = 60 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==4):
                        break

                self.state = 62
                self.match(wmtlParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        localctx = wmtlParser.FormulaContext(self, wmtlParser.WmtlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wmtlProperty)
                        self.state = 66
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 67
                        localctx.op = self.match(wmtlParser.IMPLIES)
                        self.state = 68
                        localctx.right = self.wmtlProperty(7)
                        pass

                    elif la_ == 2:
                        localctx = wmtlParser.FormulaContext(self, wmtlParser.WmtlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wmtlProperty)
                        self.state = 69
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 70
                        localctx.op = self.match(wmtlParser.AND)
                        self.state = 73
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 71
                            self.match(wmtlParser.T__5)
                            self.state = 72
                            localctx.weight = self.match(wmtlParser.VARIABLE)


                        self.state = 75
                        localctx.right = self.wmtlProperty(6)
                        pass

                    elif la_ == 3:
                        localctx = wmtlParser.FormulaContext(self, wmtlParser.WmtlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wmtlProperty)
                        self.state = 76
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 77
                        localctx.op = self.match(wmtlParser.OR)
                        self.state = 80
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 78
                            self.match(wmtlParser.T__5)
                            self.state = 79
                            localctx.weight = self.match(wmtlParser.VARIABLE)


                        self.state = 82
                        localctx.right = self.wmtlProperty(4)
                        pass

                    elif la_ == 4:
                        localctx = wmtlParser.FormulaContext(self, wmtlParser.WmtlPropertyContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_wmtlProperty)
                        self.state = 83
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 84
                        localctx.op = self.match(wmtlParser.UNTIL)
                        self.state = 85
                        self.match(wmtlParser.T__2)
                        self.state = 86
                        localctx.low = self.match(wmtlParser.RATIONAL)
                        self.state = 87
                        self.match(wmtlParser.T__3)
                        self.state = 88
                        localctx.high = self.match(wmtlParser.RATIONAL)
                        self.state = 89
                        self.match(wmtlParser.T__4)
                        self.state = 92
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==6:
                            self.state = 90
                            self.match(wmtlParser.T__5)
                            self.state = 91
                            localctx.weight = self.match(wmtlParser.VARIABLE)


                        self.state = 94
                        localctx.right = self.wmtlProperty(2)
                        pass

             
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BooleanExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def VARIABLE(self):
            return self.getToken(wmtlParser.VARIABLE, 0)

        def BOOLEAN(self):
            return self.getToken(wmtlParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return wmtlParser.RULE_booleanExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanExpr" ):
                listener.enterBooleanExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanExpr" ):
                listener.exitBooleanExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanExpr" ):
                return visitor.visitBooleanExpr(self)
            else:
                return visitor.visitChildren(self)




    def booleanExpr(self):

        localctx = wmtlParser.BooleanExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_booleanExpr)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                localctx.op = self.match(wmtlParser.VARIABLE)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                localctx.op = self.match(wmtlParser.BOOLEAN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.wmtlProperty_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def wmtlProperty_sempred(self, localctx:WmtlPropertyContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 1)
         




